@@ -9,7 +9,7 @@ DIST julia-0.2.1.tar.gz 1899534 SHA256 be07283635b1bd73085f0152d3433762c1aaf115f
 DIST libuv-julia-0.2.1.tar.gz 652078 SHA256 60a98962ab7e10c924604ccd3373083e8c376a01fcac4bf568058b1f6b026f81 SHA512 73cc9903d1d9d8b8aa8c02543058f4c407aa6b125eb26506f55115cab212bcb7c1af0d215c2b9ca771f135d3913c1490a510294d658bf8d5a6dbee3dd397226f WHIRLPOOL 42b204b8cb071919b796ed745150b848fabe94668d7fb92a39505c86fefa98f52812ac2bec05821214c7e2c7120b06a47eb66e4a1a2a3acc209264244773faa3
 EBUILD julia-0.2.0-r1.ebuild 3766 SHA256 ed96cbc5f376221c80e48f24d49e1e0d5d9994684883883ad6eda4569cfc537c SHA512 a6b92526aba9398e64c902c4cf75302057280298833b3bf9f39a1e1117320665cd7b81d6422e04118fa797d7ba4843885e32cbdd9521eb2cd4b7cd9932cd110c WHIRLPOOL cdac069b446c5b89696b1782d765005b3f3c1d3f5c74cd9cba02672a9783fbc3e16431ec81e95ecf2805e4051cc79fffe18b28473d99122cc8cc89b2451a784b
 EBUILD julia-0.2.0.ebuild 2619 SHA256 ae2c1cb1a8709cea9dfbc6ae68efde94d7ff481d15429339e59156759e2a7268 SHA512 045b4adfaf28d41b25c721c25150355cf9a99603c747e2cfc3534f4407b6ffca7bb31f368a1c6a96ead55b262471bdba443b4d546e50eda81ef5ba5db9ed7f9a WHIRLPOOL 27e21e72c22c1dc8022f62b6f5a7209e949e6daf090cef02db55cf3bb2720170be40fe5b1adfb8d8c33e89fea5db808cb7793c3c8257b5a6cb1426b2c92bca01
-EBUILD julia-0.2.1-r1.ebuild 3952 SHA256 55c9d804478a1c49bfac50d5d603e5d0b512d53a5c1aa386feb7e6890370e0ca SHA512 f0caae55bdd4f4ec0e63243c3269bf2f913449a0e2fe5721ddd49bb290bd15af4bbe62a5051709a17d20f7d87df1798d74fb76eeefca156477e96ed71c3fa287 WHIRLPOOL 0c8b2f82600627b3bc1dd3d110df5b48219a1dc6825d4150d90973f095a06884443f63d0549be30d770cf8aae04f492b7bb579d1addcdbcc716df6422ade39a6
+EBUILD julia-0.2.1-r1.ebuild 3952 SHA256 3d329755f0213d6ebc957902c95479506942e77b373bc1e60a3cf532788f6f6e SHA512 68fb54a21c378d016629bfc2d8865b783b21db00bb1ebba833c21dbbd5cb73553cd1276a1c4c1043bb9bb2ceec5fbddcfdceea81fa9bcadeaee64baf7cb36f6d WHIRLPOOL 617f7be0d123b2f3c803cac017187ef29a59bf843418f3c8bcc62dd953f31e8276f7ca8671aaa18bd64a5fb4a575aae18155b9a0b07675bbf02fa5b06f69915b
 EBUILD julia-0.2.1.ebuild 3889 SHA256 a06db6ba4b9f6e3b2319a1a187862dc8a39c765006b21054332c6092c01b8e09 SHA512 80363c00376ce7d1c82c6f659f7c1ac20706efad7b4182f247b1df4f0b1eda3bd99d0740aab8bbad665452c713671871a963f423cda70b9b546ff52931f47253 WHIRLPOOL 2ce376da5e4ee30027952978878a0de4ff8881ab48f91c987c714780ebe1cd9480c11a0b84bf877d9349cf50c322e403a8a66c1394555560225b55bdab1c3864
-MISC ChangeLog 1983 SHA256 ca49d18ff1dae78cc393af418b5dffff952e6600399f916a3867bd854f2fa12c SHA512 9fadf7e505725558c5bea0a6b58cc3c6769cdf4a1e30989e73c19a29364184e08e46eca806341503590eef4da1be71deed2e61326fa8f66639cda0b308857445 WHIRLPOOL 18341452583fbbd83f80382b4f6339519a188beffea102b581d1950734c9a517fb124856616723e2c562860f6c177b184d1c8dd406f67d92eddb187b4e105b11
+MISC ChangeLog 2087 SHA256 79fc24ba6eb610615e90b1df363b2026213a0e1df2253237c24f255a0ac040e4 SHA512 55d7cd339cbc41cdadf520947271b0e4d2be18d41df67edcbeb2dca9570de9b34bf947ce51db2ac0e3c13b7a1aa2a1efa4a2478e6aa09df1eb58e1eec41e046c WHIRLPOOL a6afded8a6b59bc04dfc8e3c70a38be1a4a8c7303a686954cc3d1875c1fb96288efb5f99232be3b4300b37889a70f54b698057d4c46cf36bf4ffa734f975571e
 MISC metadata.xml 966 SHA256 06b0900a193cc1f8970498e492d47c6405800cdfc38593fa1d459553694ba4ad SHA512 c631a08f34edbf4ec104f2d35ab2469227998b2afc19ae65047a2e93beec001b23c14ce7c91e91c1446c65722c94d60ea6c63924bdc5e9f5f73d44a629db07bd WHIRLPOOL 21044035a2912143121cb01ef8e2f2048d7b0a601b9b13703389fea44883691d6f3a37c8c312c7534fe908ab2bbf39576230104cfc31e6f99a7ac5eb4ace5bea
