@@ -10,13 +10,13 @@ EBUILD tweepy-1.12.ebuild 712 SHA256 42fa1a93ca7d4b8fa66ee907a9f49eff7671539f312
 EBUILD tweepy-1.13.ebuild 710 SHA256 478eee789183771353ccc0b223beefcaf3f37b6b5c43edfdff6b7febfa682c95 SHA512 1f077cb63d13cd9bea23780dace9d75dc6ea359e9b8beaaa46e0a0f7f66448a2e96c251484aa08aeaeb351fb00b4512c82772cc30e6a3bc19a590fe7b62b19a0 WHIRLPOOL 4504a028f463b165cbdb0f7c925646ce9d372c43d4c4abf075d7186b328974ef97e46a8193d445dcd446661f0974390ffca6aecbc23035684a0a832e69be1ee7
 EBUILD tweepy-2.0.ebuild 863 SHA256 af7a6eede52fbb4ca036b48dbd094c582637d915a63865a6cf7a931f3d91e59a SHA512 c7ac036c5daf6516464a82782a9b551a94ed8669883000de62a3aacb554404f2a3824f45c76016631638465613bed8efa8a25a9b6348f0862147f6334342dc71 WHIRLPOOL 3f63a52c4eeb7a2464a931f96d77b952890c1705f9aa183db9450ff95b9170b6fd92d869f6d85de212557fc2ad8cbeb95b49d878c03f66a57d565a572c980a74
 EBUILD tweepy-2.1.ebuild 1057 SHA256 bcdee894b8f4f723490f30a837ed2b722fc0465544c8aaa19d0267d9f2eabf73 SHA512 9f341021035f2e5e8c686a3c6c46c9a2883dd29c4b457924354fa37e294e458592751f96d7a8d077287ac05103b98923bec14980cc34054e3d6aec968c6f8eb4 WHIRLPOOL 4da8f0ba09934c354bd339f64b1e4ea11980cd78cb1f8797efbcebcf9878e32e229c7294d5943b913e9f2ddbbbe53581b3815067b19dfad1d7ec9997932e8cd8
-EBUILD tweepy-2.2.ebuild 1041 SHA256 a00e1a7a77cbbe7d01b5b2b7f26c0bb948c0decdb40ded33c9fa8d1c6da1e5d3 SHA512 618bf252019a74e0159b842f8b59fd29d818b799948a5a4e830b3d8354c942524591d36b6466477881938dc7ae3d37dbf769de5f5f246b37112d84e64b838f12 WHIRLPOOL d402c07fa58baa613e426cf356b7fc9c71ddd9308af99d8483774b2bb6e988cce8e23b8ee543702dc0964f11d00a12b01c133c4d32c007fdff81d071a9d5ea40
-MISC ChangeLog 1013 SHA256 b12f3eb418c8c18fc975f05db001c982b6a04d7fd2c5ae4d699a9d2c7a81781c SHA512 38bc9d25b3b0af2126b1e66fc55baef55982eef6418ce297d61d94910eb13c60a3b5caf130e3d9d91cbe37ea5bd6abaae38d2127551e9a34a242c4d183720dcd WHIRLPOOL 9b5b3f4e9a09f97e35f3c045f139fb4af0f8b387dbac7dd63037e5311adb3016a42b6a04c0f1b888ad443dd589f523ad4d61655e4e6ab1a9cd343e0767e91dee
+EBUILD tweepy-2.2.ebuild 1091 SHA256 f711786a55214d39062e7ee8ea1d8aa6cb23cfddf795c2af9ebcf1d0a0f4a294 SHA512 d388f01d61f9da6a99f595e7cd1724e4a148db2107c34d7da9a81a7542f5cd94ba9ecdc6b9c9b6b55809f9c2c3e7635e75338edb02af90535c6878f88af953eb WHIRLPOOL fe3c39293c60b43fe77636781844bf038d0b3a9c9c1c003de5cbeb2a96640a283aa6bed4e439802549bf2605d8d043af4d8fd6e7e1f054a410917464cc0a149f
+MISC ChangeLog 1107 SHA256 db1a0d2e8acf06f15f778c7235d510b3c5c4f7b69a1ea334db6ec66b2e975a14 SHA512 949aa0045073e9b48793ae7369a4c483e4a1334c32c431cf9ff199984bff70be7979ed8bf6cb280b2f8778260a818029178c8082a189fed20d67d55598926360 WHIRLPOOL feec53c3bae1cb9ce3a97a4ae4472ec5ed80dfa84e94285bae022e1b674688fcc3845a4611acd1a9736137c3036bc212d823d41fd82ae522b193ee7531df3b59
 MISC metadata.xml 256 SHA256 48133e84aea1bb354bfdea3222670cc5ad67bf83957aa2178feae6ab199b2d63 SHA512 9b6355e0e666e9a202204290dbfeeb8afa10276e62bd45e36fc8b94fcd110a39fd6ada522404416d3440071808058525b52555a0883c60e9c252564cd4e17cfb WHIRLPOOL 9cf9d95c51c0313bf46d83949500c6b5adb5263558c4951c2515c381b655da2fdbb340e335f0673d96178a62505325595dd82bd586f5972467bcccf02737e9dc
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iEYEAREIAAYFAlOOcVIACgkQso7CE7gHKw34cgCgrOanepn3Mm8YwwJlNqj+wGF1
-BT4AoJH/9XXQgOLExhb+yCa692gtj7Bd
-=G6IT
+iEYEAREIAAYFAlOqjKQACgkQso7CE7gHKw3FgACfdxydsz8ncrxpK4JmvZlTOUy7
+HlkAoLS2usmtpoKru+fdNG7CxiFQFJeI
+=fhMT
 -----END PGP SIGNATURE-----
