@@ -12,26 +12,24 @@ EBUILD i3-4.6.ebuild 1495 SHA256 697e777bca96c436a98eda019b18d818f3681858f820582
 EBUILD i3-4.7.2-r1.ebuild 1564 SHA256 2b2d0317ef6318e475067e1edef79e20b1551f697dc771ff26caea9888b3ea7d SHA512 4d46a6fce78cba89c01313e6203e6fdc2d480bb14b8dd7a79e06e775c3612fa678334116f31358e32c26d09a6c3d3676699f884303f7b12e26a993417f4c0cb7 WHIRLPOOL ccfa3223e54ca7c3089bd73d1e6f0b65610a5982223267bccdc3119777eaf6e366563f30d53953d6e6c9dd553b62d551134a09b8867a2a92a005a0f57d9d1b30
 EBUILD i3-4.7.2.ebuild 1479 SHA256 f36e3e436d3fdb5e51abbfe88b2e7aa91a08291a78f25ab22e22e4850376f508 SHA512 ddea00067750adebc6f71a077835634e7ee90b230a29e2ed75fcbb85416c7ec8fc4b2ba8dd84cd86bb8520d945ba7fc427829b24fac9529d94d7f2f053852917 WHIRLPOOL 37b5f3c9a1ffc49d5d57cde7ac3c7796adffe4064be16b835b1c12fce19882f5e3162d24c206df922892290c606169bfa51193e0934fa67f9fd6215de62f9705
 EBUILD i3-4.7.ebuild 1482 SHA256 6123e3c08d14556316e24e064de9846586f7e20776f8398fabefab0853931516 SHA512 ffca7e9054c73feeaf4fb76dec6e3bbf079c1eb1358be55394923a99e50a6735fb5599b879e3c459bfd26bcf77832dd7248489b91ac0d523877468571d915e7e WHIRLPOOL 865b25367a8b329eda187a68cf2ccec3200e26aac516cf8a93ce301222b2272bf2327b09a6867c06e47b42cd21d24e2b9e68cf0ba5d0159d03a451fd8aafdefc
-EBUILD i3-4.8.ebuild 1490 SHA256 c72413fc2341f9e2fdd42438805e5021462e581c24bb4ea04bd71281cc36a785 SHA512 e9922bf24029dac537033c60ac986cdf55c91daf47bdff870b67e98ff3df6c207b0f8da6a737c5c43032e97f8264120d1be87c4ae26b7901e1fcbca05e1e7fe9 WHIRLPOOL f4aa12d846f3e8e04820ae136007cce8f4553da9c9fe33c3549cedad7ed7cb00a0b89399b15e6bf0ef221649625dab06c0357d338b658bd8c391e6f0fda2656a
-EBUILD i3-9999.ebuild 1520 SHA256 187c33f683c977de141eacdde86d81b7aceed3c2e2a42062a18a6f11ad7fd2dc SHA512 3ebd0305eb5b6567e76e239df565751107dac29f06d4a3757f4d0e85aa1cca7b57e6720c942975165e494248be55bd9c553c8f314a7980566bda4855ccc4c771 WHIRLPOOL de261fe5cfc740581d8b84bb0f2c9bd0175464038557b21cce422885ace82b3ff34d017b30b9da72bc334b7f7fb35dc1e4f1019b6e1b54ecf1cb57d9169e90f3
-MISC ChangeLog 8092 SHA256 37e912eb5438a1e88fae88da6b9616401a332f06b023cee0dafd04a6d64ba603 SHA512 30246e1fd47906b8b880decbfbf7e41ae3ed606b13c9feb77097e15fcab80528667763f05471dd43cbdff164da813f5441e039bb57796f23417d67a40c7019fc WHIRLPOOL 2379e4a7e8c0756bae26ecd5932bb725b0e76da1453629100f2f4306cb39c44e58627f5b8e7dff4b25fe175b9b55e8a4293b1c48e37ebfefaf2dd5612ec5bfe2
+EBUILD i3-4.8.ebuild 1545 SHA256 41b07ed96baf46aa289c163106372f9886bea5d3c78797e0976509ff90d9b2e6 SHA512 f34c07a2e7a0d6e441d1447e7425283afc628b627c3d47cfecdede4722a34da0d1ce1ca14d3ad0897b46333b493fe854972325bec94ed78356fe76c514ea945a WHIRLPOOL b5e6f978b03136f5014be34a78ffaf6c258dca8753d9dc0150f643f381b0334fc155eaf50c81e4e37149768ded8e78a23833b20eef1ae136c4817eb13a677123
+EBUILD i3-9999.ebuild 1562 SHA256 5a9b95828dd78b912de00d2a4555a76df8b66eaaf2856d3ed9eff754de22413e SHA512 08601168dbb066b1f04a00920306ce794b65d6103cafea2dbca5f46916aa9d44f90159f08d92ffbfc3a68b2676678e862c53f7f50a759982df20e7af373b7835 WHIRLPOOL d2684cbf6f68d5fef338935088251fced6e8c21d1ac04e6e3bc0b869249c32d09d92a6a670f02a6ad3a9a6fc7e4f0b3e5da71341e39dd28be5226ae229f0cc08
+MISC ChangeLog 8331 SHA256 cb151f77097574401a78a5e93e0ba8780da8f0ea235628960ffd048f26242d73 SHA512 702114db5040970aaf11f611b3063538155f18be99f74e33557c691acdc186c258dd7ba5553291d0595e29d709717d69aec3f0a27f3dd19e50b5558285da459c WHIRLPOOL 61f6cab8740efb95036cc44ad89bcfc772910f68896d512189090fd801e85b92d5e6836d1bb705941814d1197c47ed518fcdda351bce62117726b3f51c4eb998
 MISC metadata.xml 578 SHA256 747cbbd11d56e581ae8e58210207070fee2a663d7f029b260a5e5f1a69fb05ad SHA512 b8afbb2ec3fa72b688c19935ea9c28b43fdd4569a25ec3a91d04a211ccffd1cb661a03adf810b6c0fa054505bcd8086db60764bafd721411eb81f287b19e7514 WHIRLPOOL 6802ac798ca27a7cb073522c5e0c883459865cb63110f575a7d2ba2db0b13feb36d1102ff86a75e04c16bb740911d39b67d4da9b13c6683e051f8a8f3b44fa68
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQJ8BAEBCABmBQJTnvXQXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzMDlCNDQ4NjEyNDI4NjA5REVEMDI3MzIy
-MjBDRDFDNUJERUVEMDIwAAoJECIM0cW97tAgPxwP/0VnUMuji3T0ysUY/qqdeB4B
-MHJrLEjNc2pwvpLRWtcB2bHfi/9HgY1caKQaeyTgFDZORgpZsDmAsSm2hZgtqBvc
-OmIYmvj7OCEuy1ni52tGFbmA2dHncmwmuSSokRh2wn7NjfQ+XuGQuldXqJnrnrfI
-OUPoQQklybm3ZRmYRzAFjSRDZchWxujdFj/F1Yq27LlUzdYEj6VH+jNz9QUzFpfw
-XAYEudAHBaDP4ij2/LM/b6VExIGFkC73G3WuaeHkheBmVGPrKhmoZwW89+OTCAeg
-67ED+A6Dd3Lqfh8kODk67r+gua6+aGJERROtWYvPmtGbTsdVr4PzliM/i/UY5Rfa
-Cs4yupxGuhF+wraR2cqnXsjcs0m8S5LYAGLkd1uPjZqv8xWqSndC8fojK3f7hfeI
-x4adQQNkLP2kAs2ilwUsPODbzSq9VwpiQ7U1f3qi6YEdyUWFs5Jcl1ujmJH0oQon
-IvwJDwYVvYfr/zlLy5hZeMpNda5c1+eDuDe6HA69WHce/ME0X52K90c3guVFYnZD
-t9B2D6SDVY0awT9w/EHGOQyBcj21gyl+f+bHchvbgw2gzIXSm2GJ2hgPd7F3pJe7
-VH3hReb6RtM9vqXp6oxot1ldJSeYVZVZluHGPBViJrvb6jYginmHzKrviys/Z2F5
-HkoIZg33uiJqLBBEpqaV
-=p3UQ
+iQIcBAEBCAAGBQJTqorOAAoJEF0huFKJUZL5+FgP/3tLfJrvQ/V/WIEd9dFCZ3Uc
+Xrix4Qy4rmczH2HIFyxvwbnHSo4M1oWon1ymf9sR3+doyHCL0XvsWRyEZBeZTwHP
+B0+YIoz9RsPSwpiEU4Ngro+uX2wLSsWkEZ297c/Mxol8kFmJHOGJTBEGMHACuwVw
+48KPaRCRf+V3e2SNOX5090hWO9vALhmblzb+Ui31zhbI1JkpOvKoFUgKzbhkHiAZ
+Ha2eJ05gQ3Z3LBDkIldg61x6zypfuVxV/NNyBFwZorgLDtK/bQ/azCDqW/K7K57n
+F3E2h8lJDI2fVWFl5kNco+l8aZLt4GHUJyYg2YWMp7ogPYPIWghaU7mjfYjjSeN4
+gAN8gUg7zJoBmkwubH9dacbw7dcmiBjSeHj6BAdoKTwgi9Ff24iXdBiT076w0Wqi
+Nn/1OC5ezfV69oE5IIQ2ozjIjHsMJhpA3K0va2AMnU8fYIB81dNj3EubPFfVcOqh
+q4Mcl+AFQ/tCP7TQHab4o+P7iEI9zZMl/DtpjQ50S0Tk/FHSgdFfJxeuQfzbv0tp
+1dEKdwH2B6GtA2YxQwRP60Zcm5lAKDjrbM2OmyI+S+3XRYDX9Ee4To18f+f8evB2
+SKd8aCOE3AD98yqEPDejZDbtApYCHzdjA/7aZs2TigTHnRA/DbpQHByN3mFAe/hO
+71wUd2zT4EwvwHojcOGl
+=nvTZ
 -----END PGP SIGNATURE-----
