@@ -1,6 +1,11 @@
 # ChangeLog for x11-wm/i3
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-wm/i3/ChangeLog,v 1.55 2014/06/16 13:49:01 hasufell Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-wm/i3/ChangeLog,v 1.56 2014/06/25 08:41:42 xarthisius Exp $
+
+  25 Jun 2014; Kacper Kowalik <xarthisius@gentoo.org> i3-4.8.ebuild,
+  i3-9999.ebuild:
+  Add proper perl dependencies for additional tools like i3-save-tree and i3
+  -dmenu-desktop. Fixes bug #514188 by zolar czakl <tractrix@gmail.com>
 
   16 Jun 2014; Julian Ospald <hasufell@gentoo.org> i3-9999.ebuild:
   Ensure proper version of yajl, use "next" branch
