@@ -1,6 +1,9 @@
 # ChangeLog for dev-lang/julia
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-lang/julia/ChangeLog,v 1.11 2014/06/25 08:13:58 patrick Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-lang/julia/ChangeLog,v 1.12 2014/06/25 08:34:58 patrick Exp $
+
+  25 Jun 2014; Patrick Lauer <patrick@gentoo.org> julia-0.2.1-r1.ebuild:
+  Fix llvm dependency #515062
 
   25 Jun 2014; Patrick Lauer <patrick@gentoo.org> julia-0.2.1-r1.ebuild:
   Add missing camd dependency
